# MdIE

./: CMakeLists.txt
cmake/: filters.cmake
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb/: CMakeLists.txt
dependencies/submodules/: CMakeLists.txt
include/: align.hpp  error.hpp  file.hpp  gl_program.hpp  image.hpp  singleton.hpp
resources/shaders/: fs.frag  vs.vert
src/: error.cpp  file.cpp  gl_program.cpp  image.cpp  main.cpp  main_img_test.cpp
